# pytomlpp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  PACKAGING.md  README.md  claude-todo.md  index.html  pyproject.toml  pytomlpp.html  search.js  setup.cfg  setup.py
.github/workflows/: dists.yml  wheels-linux.yml  wheels-macos.yml  wheels-windows.yml  wheels.yml
benchmark/: data.toml  requirements.txt  run.py
ci/: build-wheel.sh
conda.recipe/: meta.yaml
include/: pytomlpp.hpp
include/pytomlpp/: compilers.hpp  pytomlpp.hpp  toml_types.hpp
src/: encoding_decoding.cpp  pytomlpp.cpp  pytomlpp.hpp  type_casters.cpp
src/pytomlpp/: __init__.py  _impl.pyi  _io.py
tests/: CMakeLists.txt  requirements.txt  test_example.cpp  test_example2.cpp  test_lib_config.cpp
tests/python-tests/: test_add.py  test_api.py
