[metadata]
name = pytomlpp
version = 1.0.12
author = Bob Fang
author_email = bob.fang.london@gmail.com
license_file = LICENSE
description = A python wrapper for toml++
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/bobfang1992/pytomlpp
    Tracker = https://github.com/bobfang1992/pytomlpp/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Utilities
keywords = toml, parser, serilization, deserialization, serdes

[options]
setup_requires =
    pybind11~=2.8
zip_safe = false
packages = find:
package_dir = =src

[options.packages.find]
where = src

[options.package_data]
* =
    *.pyi
    py.typed

[tool:pytest]
